<resources>
    <string name="app_name">BasketBall</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_match_list">MatchListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="title_activity_team_status">TeamStatusActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_currency">币种名称</string>
    <string name="current_price">现价</string>
    <string name="increase_amount">涨幅</string>
    <string name="market">行情</string>
    <string name="add_currency">+添加币种</string>
    <string name="currency_news">新闻</string>
    <string name="currency_brief">简况</string>
    <string name="currency_market">市场</string>
    <string name="success">操作成功</string>
    <string name="failure">操作失败</string>
    <string name="volume">交易量</string>

    <string-array name="market">
        <item>沪深</item>
        <item>港股</item>
        <item>美股</item>
    </string-array>

    <string-array name="home_navigation_title">
        <item>自选</item>
        <item>市值</item>
        <item>涨幅</item>
        <item>BTC</item>
        <item>ETH</item>
        <item>EOS</item>
        <item>火币</item>
        <item>币安</item>
        <item>Bitfinex</item>
    </string-array>


    <string-array name="info_data_name">
        <item>最高</item>
        <item>最低</item>
        <item>今开</item>
        <item>今收</item>
        <item>买一</item>
        <item>卖一</item>
    </string-array>
    <string-array name="currency_info_data_item">
        <item>新闻</item>
        <item>简况</item>
        <item>市场</item>
    </string-array>

 <string-array name="item_currency_info_kline">
        <item>VOL</item>
        <item>MACD</item>
        <item>KDJ</item>
    </string-array>

    <string-array name="btc_info_project_title">
        <item >排行</item>
        <item >市值</item>
        <item >流通量</item>
        <item >总发行量</item>
        <item >ICO成本</item>
        <item >发行时间</item>
        <item >相关链接</item>
    </string-array>
    <string-array name="currency_info_brief_basic_info">
        <item >英文名称：</item>
        <item >中文名称：</item>
        <item >官网：</item>
        <item >排名：</item>
        <item >币种总量：</item>
        <item >流通量：</item>
        <item >上架交易所：</item>
    </string-array>
</resources>
