<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/ll_sort_prompt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/grey_e"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/TextGrey14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_currency" />

        <TextView
            style="@style/TextGrey14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current_price" />

        <TextView
            style="@style/TextGrey14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/increase_amount" />

    </LinearLayout>
</layout>